force-app/main/default/objects/Reject__c/Reject__c.object-meta.xml
<CustomObject>
    <label>Reject</label>
    <nameField>
        <label>Bus</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Rejects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>