force-app/main/default/objects/Reject__c/fields/Buildstation_Id__c.field-meta.xml
<CustomField>
    <fullName>Buildstation_Id__c</fullName>
    <label>Buildstation Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>