force-app/main/default/objects/Reject__c/fields/Bus_Part_Id__c.field-meta.xml
<CustomField>
    <fullName>Bus_Part_Id__c</fullName>
    <label>Bus Part Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>