force-app/main/default/objects/Reject__c/fields/BuschasisNumber__c.field-meta.xml
<CustomField>
    <fullName>BuschasisNumber__c</fullName>
    <label>BuschasisNumber</label>
    <length>255</length>
    <type>Text</type>
</CustomField>