force-app/main/default/objects/Reject__c/fields/Ecard_Id__c.field-meta.xml
<CustomField>
    <fullName>Ecard_Id__c</fullName>
    <label>Ecard Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>