force-app/main/default/objects/Reject__c/fields/LastModifiedByEmployeeId__c.field-meta.xml
<CustomField>
    <fullName>LastModifiedByEmployeeId__c</fullName>
    <label>LastModifiedByEmployeeId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>