force-app/main/default/objects/Reject__c/fields/Quantity_Rejected__c.field-meta.xml
<CustomField>
    <fullName>Quantity_Rejected__c</fullName>
    <label>Quantity Rejected</label>
    <precision>12</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>