force-app/main/default/objects/Reject__c/fields/reason_code_id__c.field-meta.xml
<CustomField>
    <fullName>reason_code_id__c</fullName>
    <label>Reason Code Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>