force-app/main/default/objects/Reject__c/fields/Reject_Description__c.field-meta.xml
<CustomField>
    <fullName>Reject_Description__c</fullName>
    <label>Reject Description</label>
    <type>TextArea</type>
</CustomField>