force-app/main/default/objects/Reject__c/fields/Rejected_by__c.field-meta.xml
<CustomField>
    <fullName>Rejected_by__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Rejected by</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Rejects</relationshipName>
    <type>Lookup</type>
</CustomField>