force-app/main/default/objects/Reject__c/fields/Rejected_By_Employee_Id__c.field-meta.xml
<CustomField>
    <fullName>Rejected_By_Employee_Id__c</fullName>
    <label>Rejected By Employee Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>