force-app/main/default/objects/Reject__c/fields/row_pointer__c.field-meta.xml
<CustomField>
    <fullName>row_pointer__c</fullName>
    <externalId>true</externalId>
    <label>Row pointer</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>