force-app/main/default/objects/Reject__c/fields/S3_file_path__c.field-meta.xml
<CustomField>
    <fullName>S3_file_path__c</fullName>
    <label>S3 file path</label>
    <type>Url</type>
</CustomField>