force-app/main/default/objects/Reject__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Reason_Code__c</columns>
    <columns>Quantity_Rejected__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Status__c</columns>
    <columns>Supply_Chain__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>